[gd_scene load_steps=2 format=3 uid="uid://bbijp713lja3a"]

[ext_resource type="Script" uid="uid://q7xwxo0bmb0w" path="res://slices/run/pause/screens/pause_menu/pause_menu.gd" id="1_34sy4"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_34sy4")
metadata/_custom_type_script = "uid://di8k3ed6nq64j"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResumeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "RESUME"

[node name="StackButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "STACK"

[node name="HooksButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "HOOKS"

[node name="SettingsButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "QUIT TO MAIN MENU"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StackButton" to="." method="_on_stack_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HooksButton" to="." method="_on_hooks_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
